--- a/src/Login.css
+++ b/src/Login.css
@@ -9,7 +9,7 @@
 
   background: #eee;
   text-align: center;
-  padding: 1rem;
+  padding: 0;
 
   display: flex;
   flex-direction: column;
@@ -18,17 +18,18 @@
 }
 
 #login img {
-  height: 300px;
+  height: 150px;
   object-fit: cover;
   object-position: 0 20px;
   filter: hue-rotate(40deg);
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 #login h1 {
   color: #111;
   text-align: center;
   padding: 0.5em;
+  margin: 0;
 }
 
 #login form {
