Add NeuralArt page with 4 images :)

--- a/src/app.css
+++ b/src/app.css
@@ -9,3 +9,4 @@
 @import 'Quiz/QuizPage.css';
 @import 'Twitch/Twitch.css';
 @import 'ExpectationReality/ExpectationReality.css';
+@import 'NeuralArt/NeuralArt.css';
