--- a/src/NeuralArt/NeuralArt.css
+++ b/src/NeuralArt/NeuralArt.css
@@ -1,5 +1,4 @@
 #neural-art {
-  padding: 1em;
 }
 
 #neural-art h1 {
@@ -10,27 +9,47 @@
 }
 
 #neural-art .grid {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 #neural-art .grid figure {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background: #53d01b;
-  color: black;
-  font-weight: bold;
-  font-family: monospace;
-  margin: 2em;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  border-top: solid;
+  padding-top: 10px;
+  border-image-source: url('/src/HomePage/img/logo_leftt.png');
+  border-image-slice: 70;
+  border-image-width: 10;
+  border-image-outset: 0;
+  border-image-repeat: round;
 }
 #neural-art .grid img {
-  width: 40vw;
+  width: 100%;
+  max-height: 50vw;
 }
 
 #neural-art .grid figcaption {
   text-align: center;
   font-size: 2rem;
+  font-weight: bold;
+  font-family: monospace; 
+  background: black;
+  color: #aaa;
+  letter-spacing: 8px;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: solid;
+  border-image-source: url('/src/HomePage/img/logo_leftt.png');
+  border-image-slice: 70;
+  border-image-width: 10;
+  border-image-outset: 0;
+  border-image-repeat: round;
 }
