--- a/src/NeuralArt/NeuralArt.css
+++ b/src/NeuralArt/NeuralArt.css
@@ -67,3 +67,16 @@
   line-height: 32px;
   text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+  #neural-art .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  #neural-art .grid img {
+    width: auto!important;
+    height: auto!important;
+    max-width: 100%;
+    max-height: 100vh!important;
+  }
+}
