--- a/src/quests/MainPage/Levels/QuestCardBorder.css
+++ b/src/quests/MainPage/Levels/QuestCardBorder.css
@@ -1,6 +1,5 @@
-svg.quest-card-border {
-  width: 500px;
-  height: 500px;
+svg.quest-card-border,
+svg.cyberpunk-border {
   position: absolute;
   top: 0;
   right: 0;
@@ -8,8 +7,28 @@ svg.quest-card-border {
   left: 0;
 }
 
-.quest-card-border path {
+svg.quest-card-border {
+  width: 500px;
+  height: 500px;
+}
+
+svg.cyberpunk-border {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.quest-card-border path,
+.cyberpunk-border path {
   stroke: #0c6cb8;
   fill: none;
   stroke-width: 1;
+}
+
+.cyberpunk-border path {
+  stroke-width: 4;
 }
