--- a/src/quests/MainPage/Levels/QuestCardBorder.css
+++ b/src/quests/MainPage/Levels/QuestCardBorder.css
@@ -8,8 +8,8 @@ svg.cyberpunk-border {
 }
 
 svg.quest-card-border {
-  width: var(--width);
-  height: var(--height);
+  width: 100%;
+  height: 100%;
 }
 
 svg.cyberpunk-border {
