Add coursework page with level 0

--- a/src/app.css
+++ b/src/app.css
@@ -11,3 +11,4 @@
 @import 'ExpectationReality/ExpectationReality.css';
 @import 'NeuralArt/NeuralArt.css';
 @import 'Resume/Resume.css';
+@import 'Coursework/Coursework.css';
