--- a/src/Coursework/Coursework.css
+++ b/src/Coursework/Coursework.css
@@ -10,3 +10,12 @@
   max-width: 100%;
   max-height: 80vh;
 }
+
+#coursework .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#coursework .card {
+  text-align: center;
+}
