--- a/src/LearningProgress/LearningProgress.css
+++ b/src/LearningProgress/LearningProgress.css
@@ -16,7 +16,7 @@ circle {
   padding: 1em 2em;
   margin: 1em;
   border-radius: 0.25em;
-  width: 1000px;
+  width: 90%;
   font-size: 1.2rem;
   position: relative;
 }
