--- a/src/slides.css
+++ b/src/slides.css
@@ -1,3 +1,5 @@
+@import 'global.css';
+
 .expectations-form {
   padding: 2em 5em;
 }
@@ -80,12 +82,27 @@
   background: rgba(0, 0, 0, 0.5);
   height: calc(var(--height) - 3em);
   z-index: 2;
+  overflow-y: scroll;
+}
+
+.subs::-webkit-scrollbar {
+  width: 4px;
+  background-color: var(--secondary);
+}
+
+.subs::-webkit-scrollbar-track {
+   background: var(--primary);;
+}
+
+.subs::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
 }
 
 .english-video-slide .subs p {
   margin: 0.5em;
   padding: 0.5em;
   color: white;
+  cursor: pointer;
 }
 
 .english-video-slide .subs p:hover {
