Add Babylon 3d for Profile on HomePage :)

--- a/src/app.css
+++ b/src/app.css
@@ -13,3 +13,4 @@
 @import 'NeuralArt/NeuralArt.css';
 @import 'Resume/Resume.css';
 @import 'Coursework/Coursework.css';
+@import 'Profile/Profile.css';
