--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -1,6 +1,16 @@
+#profile {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
 #avatarCanvas {
     width: 100%;
     height: 100%;
     touch-action: none;
-    border: solid red 2px;
+}
+
+#avatarCanvas:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
 }
