--- a/src/Game3d/Game3d.css
+++ b/src/Game3d/Game3d.css
@@ -9,3 +9,10 @@
   outline: none;
   box-shadow: none;
 }
+
+iframe {
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
