--- a/src/Game3d/Game3d.css
+++ b/src/Game3d/Game3d.css
@@ -16,3 +16,18 @@ iframe {
   top: 0;
   left: 0;
 }
+
+navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+#move-backwards-btn,
+#move-forwards-btn {
+  width: 50px;
+  height: 50px;
+}
