--- a/src/Game3d/Game3d.css
+++ b/src/Game3d/Game3d.css
@@ -26,8 +26,12 @@ navbar {
   justify-content: space-between;
 }
 
+#move-backwards-btn img,
+#move-forwards-btn img {
+  width: 50;
+}
+
 #move-backwards-btn,
 #move-forwards-btn {
-  width: 50px;
-  height: 50px;
+  padding: 1rem;
 }
