Rename Game3d to Lesson25, add lesson25 to progress

--- a/src/app.css
+++ b/src/app.css
@@ -15,4 +15,4 @@
 @import 'Coursework/Coursework.css';
 @import 'Profile/Profile.css';
 @import 'Doska/Doska.css';
-@import 'Game3d/Game3d.css';
+@import 'Lesson25/Lesson25.css';
