Make catacombs move :)

--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -1,16 +1,49 @@
-h1 {
-  text-align: center;
+#catacombs {
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
-#background {
+#catacombs .levels {
   position: absolute;
-  z-index: 1;
-  top: 0; left: 0;
-  width: 100%;
-  text-align: center;
+  top: 0;
+  left: 0;
+  display: grid;
+  width: 300vw;
+  height: 300vh;
+  grid-template-columns: 1fr 1fr 1fr;
+  transition: all 2s;
 }
 
-#background img {
-  display: block;
-  width: 100%;
+#catacombs .levels.p-1 { left: 0; top: 0; }
+#catacombs .levels.p-2 { left: -100vw; top: 0; }
+#catacombs .levels.p-3 { left: -200vw; top: 0; }
+#catacombs .levels.p-4 { left: -200vw; top: -100vh; }
+#catacombs .levels.p-5 { left: -100vw; top: -100vh;  }
+#catacombs .levels.p-6 { left: 0; top: -100vh; }
+#catacombs .levels.p-7 { left: 0; top: -200vh; }
+#catacombs .levels.p-8 { left: -100vw; top: -200vh; }
+#catacombs .levels.p-9 { left: -200vw; top: -200vh; }
+
+
+#catacombs .level {
+  position: relative;
+  color: black;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 2em;
+  letter-spacing: 4px;
 }
+#catacombs .level img {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+#catacombs img.animate-left {
+  
+}
+
