Catacombs: fix bg image styles

--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -140,12 +140,12 @@
   justify-content: center;
 }
 
-#catacombs .level bkg-img {
+#catacombs .level bg-img {
   z-index: 1;
   mix-blend-mode: overlay;
 }
 
-#catacombs .level bkg-img,
+#catacombs .level bg-img,
 #catacombs .level video {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
@@ -158,7 +158,7 @@
   z-index: 0;
 }
 
-#catacombs bkg-img.animate-left {
+#catacombs bg-img.animate-left {
   
 }
 
