--- a/src/Lesson25/Lesson25.css
+++ b/src/Lesson25/Lesson25.css
@@ -10,16 +10,7 @@
   box-shadow: none;
 }
 
-iframe {
-  transform-style: preserve-3d;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-navbar {
+.lesson25-navbar {
   position: fixed;
   bottom: 0;
   left: 0;
