--- a/src/Katakombi/Katakombi.css
+++ b/src/Katakombi/Katakombi.css
@@ -158,6 +158,10 @@
   z-index: 0;
 }
 
+#catacombs .level video.hide {
+  display: none;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -213,6 +217,7 @@
 }
 
 .circle {
+  display: none;
   z-index: 3;
   animation: circle 5s infinite alternate;
   position: relative;
