--- a/src/typography.css
+++ b/src/typography.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto+Slab&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto+Slab&display=swap'); */
 
 :root {
   --code-font: 'Nunito', sans-serif;
