--- a/src/quests/MainPage/MainPage.css
+++ b/src/quests/MainPage/MainPage.css
@@ -1,79 +1,34 @@
 @import "Levels/QuestList.css";
 @import "Panel.css";
 
-html, body {
-  padding: 0;
-  margin: 0;
+#main-page .lessons-grid {
 }
-
-body {
-  font-size: 16px;
-  background: black;
-  color: #ddd;
-  font-size: 1.3rem;
-  line-height: 1.5;
-  letter-spacing: 1px;
-}
-
-h2 {
-  text-align: center;
-  font-size: 3rem;
-  letter-spacing: 4px;
-}
-
-body {
-  overflow-y: scroll;
-  scrollbar-color: rebeccapurple green;
-  scrollbar-width: thin;
-}
-body::-webkit-scrollbar {
-  width: 2px;
-  background-color: black;
-}
-
-body::-webkit-scrollbar-track {
-   background: #aaa;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #0a6db8;
-}
-
-.lessons-grid {
-}
-.row {
+#main-page .row {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.lesson {
+#main-page .lesson {
   font-size: 1.5em;
   letter-spacing: 4px;
   text-align: center;
   border: solid pink 2px;
 }
 
-.arrow {
+#main-page .arrow {
   transform: rotate(90deg);
   transform-origin: center;
 }
 
-.lesson img {
+#main-page  .lesson img {
   width: 150px;
   height: 150px;
   border: solid black 3px;
   border-radius: 15px;
 }
 
-.lesson a {
+#main-page  .lesson a {
   display: block;
 }
 
-
-figure {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
